--- a/src/i18n/locales/uk.json
+++ b/src/i18n/locales/uk.json
@@ -8,6 +8,7 @@
   "BTNS": {
     "SIGN_IN": "Увійти",
     "LOGOUT": "Вийти",
+    "ADD_ADDRESS": "Додати адресу",
     "ADD_POST": "Додати пост"
   },
   "LANGUAGES": {
