--- a/src/i18n/locales/uk.json
+++ b/src/i18n/locales/uk.json
@@ -9,7 +9,7 @@
     "SIGN_IN": "Увійти",
     "LOGOUT": "Вийти",
     "ADD_ADDRESS": "Додати адресу",
-    "ADD_POST": "Додати пост"
+    "ADD_POST": "Додати товар"
   },
   "LANGUAGES": {
     "ENGLISH": "Англійська",
