--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -8,7 +8,8 @@
   "BTNS": {
     "SIGN_IN": "Sign in",
     "LOGOUT": "Logout",
-    "ADD_POST": "Add post"
+    "ADD_ADDRESS": "Add address",
+    "ADD_POST": "Add product"
   },
   "LANGUAGES": {
     "ENGLISH": "English",
