edit login page

--- a/src/i18n/locales/uk.json
+++ b/src/i18n/locales/uk.json
@@ -12,7 +12,8 @@
     "ADD_POST": "Додати товар",
     "SETTINGS": "Підтримка",
     "MAINPAGE": "Головна",
-    "ABOUT": "Про нас"
+    "ABOUT": "Про нас",
+    "ADD": "Додати ферму"
   },
   "LANGUAGES": {
     "ENGLISH": "Англійська",
