change farm_id for createOffer

--- a/src/i18n/locales/uk.json
+++ b/src/i18n/locales/uk.json
@@ -13,7 +13,7 @@
     "SETTINGS": "Підтримка",
     "MAINPAGE": "Головна",
     "ABOUT": "Про нас",
-    "ADD": "Додати ферму"
+    "ADD": "Мої Ферми"
   },
   "LANGUAGES": {
     "ENGLISH": "Англійська",
