--- a/src/i18n/locales/uk.json
+++ b/src/i18n/locales/uk.json
@@ -13,7 +13,8 @@
     "SETTINGS": "Підтримка",
     "MAINPAGE": "Головна",
     "ABOUT": "Про нас",
-    "ADD": "Мої Ферми"
+    "ADD": "Мої Ферми",
+    "ORDERS": "Замовлення"
   },
   "LANGUAGES": {
     "ENGLISH": "Англійська",
