--- a/src/i18n/locales/uk.json
+++ b/src/i18n/locales/uk.json
@@ -14,7 +14,8 @@
     "MAINPAGE": "Головна",
     "ABOUT": "Про нас",
     "ADD": "Мої Ферми",
-    "ORDERS": "Замовлення"
+    "ORDERS": "Замовлення",
+    "PAY": "Оплата"
   },
   "LANGUAGES": {
     "ENGLISH": "Англійська",
